service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-landing-page-service
  labels:
    app: jenkins-landing-page
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: jenkins-landing-page
