rules-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:

## Service Location n Characters
  - host: jenkins-landing-page.gandi.my.id
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-landing-page-service
          servicePort: 80
